appId: io.qaninja.android.twp
---
- stopApp
- clearState
- launchApp
- waitForAnimationToEnd:
    timeout: 10000
- assertVisible: "COMEÇAR"
- tapOn: "COMEÇAR"
- assertVisible: "AVENGERS"
